USE_POPCNT and inline=1000

--- a/nacl/Makefile
+++ b/nacl/Makefile
@@ -1,16 +1,17 @@
-OBJS = nacl.o bitbase.o bitboard.o endgame.o evaluate.o \
+OBJS = nacl.o bitbase.o benchmark.o bitboard.o endgame.o evaluate.o \
 	material.o misc.o movegen.o movepick.o pawns.o position.o psqt.o \
 	search.o thread.o timeman.o tt.o uci.o ucioption.o
 
 HEADERS = $(wildcard ../src/*.h)
 
-PNACL_TC_PATH = $(NACL_SDK_ROOT)/toolchain/linux_pnacl
+PNACL_TC_PATH = $(NACL_SDK_ROOT)/toolchain/mac_pnacl
 PNACL_CXX = $(PNACL_TC_PATH)/bin/pnacl-clang++
 PNACL_FINALIZE = $(PNACL_TC_PATH)/bin/pnacl-finalize
 
 CXXFLAGS = -fno-exceptions -fno-rtti -O3 -I$(NACL_SDK_ROOT)/include \
-	-DIS_64BIT -DNDEBUG -DNO_PREFETCH -std=gnu++11 \
-	-DANTI -DATOMIC -DHORDE -DKOTH -DRACE -DTHREECHECK
+	-DIS_64BIT -DNDEBUG -DNO_PREFETCH -DUSE_POPCNT -std=gnu++11 \
+	-DANTI -DATOMIC -DHORDE -DKOTH -DRACE -DTHREECHECK \
+	-mllvm -inline-threshold=1000
 
 LDFLAGS = -L$(NACL_SDK_ROOT)/lib/pnacl/Release -O3 -lppapi_cpp -lppapi -lpthread
 
