--- a/nacl/Makefile
+++ b/nacl/Makefile
@@ -1,10 +1,10 @@
-OBJS = nacl.o bitbase.o bitboard.o endgame.o evaluate.o \
+OBJS = nacl.o bitbase.o benchmark.o bitboard.o endgame.o evaluate.o \
 	material.o misc.o movegen.o movepick.o pawns.o position.o psqt.o \
 	search.o thread.o timeman.o tt.o uci.o ucioption.o
 
 HEADERS = $(wildcard ../src/*.h)
 
-PNACL_TC_PATH = $(NACL_SDK_ROOT)/toolchain/linux_pnacl
+PNACL_TC_PATH = $(NACL_SDK_ROOT)/toolchain/mac_pnacl
 PNACL_CXX = $(PNACL_TC_PATH)/bin/pnacl-clang++
 PNACL_FINALIZE = $(PNACL_TC_PATH)/bin/pnacl-finalize
 
