Changes to make pnacl debuggable

--- a/nacl/Makefile
+++ b/nacl/Makefile
@@ -4,18 +4,18 @@ OBJS = nacl.o bitbase.o bitboard.o endgame.o evaluate.o \
 
 HEADERS = $(wildcard ../src/*.h)
 
-PNACL_TC_PATH = $(NACL_SDK_ROOT)/toolchain/linux_pnacl
+PNACL_TC_PATH = $(NACL_SDK_ROOT)/toolchain/mac_pnacl
 PNACL_CXX = $(PNACL_TC_PATH)/bin/pnacl-clang++
 PNACL_FINALIZE = $(PNACL_TC_PATH)/bin/pnacl-finalize
 
-CXXFLAGS = -O3 -std=gnu++11 -fno-exceptions -fno-rtti \
+CXXFLAGS = -O0 -g -std=gnu++11 -fno-exceptions -fno-rtti \
 	-I$(NACL_SDK_ROOT)/include \
 	-mllvm -inline-threshold=500 \
-	-DNDEBUG -DIS_64BIT -DUSE_POPCNT -DNO_PREFETCH \
-	-DANTI -DATOMIC -DCRAZYHOUSE -DHORDE -DKOTH -DRACE -DTHREECHECK \
+	-DIS_64BIT -DUSE_POPCNT -DNO_PREFETCH 
+#	-DANTI -DATOMIC -DCRAZYHOUSE -DHORDE -DKOTH -DRACE -DTHREECHECK \
 	-DUSELONGESTPV
 
-LDFLAGS = -L$(NACL_SDK_ROOT)/lib/pnacl/Release -O3 -lppapi_cpp -lppapi -lpthread
+LDFLAGS = -L$(NACL_SDK_ROOT)/lib/pnacl/Release -O0 -g -lppapi_cpp -lppapi -lpthread
 
 stockfish.pexe: stockfish.bc
 	$(PNACL_FINALIZE) --compress -o $@ $<
